made corrections according to audit, recommit

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/layout.css">
-    <title>WDD 131 - Do</title>
+    <title>Men Do - WDD 131</title>
 </head>
 
 <body>
@@ -13,19 +13,21 @@
         <p>Header Content</p>
         <nav>
             <div class="flex-box">
-                <div>Home</div>
-                <div>Projects</div>
-                <div>Services</div>
-                <div>Contact Us</div>
+                <div><a href="">Home</a></div>
+                <div><a href="">Projects</a></div>
+                <div><a href="">Services</a></div>
+                <div><a href="">Contact Us</a></div>
             </div>
         </nav>
     </header>
-    <div class="left-sidebar">
-        <p>Main Content</p>
-    </div>
-    <div class="right-sidebar">
-        <p>Aside Content</p>
-    </div>
+    <main>
+        <div class="left-sidebar">
+            <p>Main Content</p>
+        </div>
+        <div class="right-sidebar">
+            <p>Aside Content</p>
+        </div>
+    </main>
     <footer>
         <p>Footer Content</p>
     </footer>
