--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -21,13 +21,11 @@
         </nav>
     </header>
     <main>
-        <div class="left-sidebar">
-            <p>Main Content</p>
-        </div>
-        <div class="right-sidebar">
-            <p>Aside Content</p>
-        </div>
+        <p>Main Content</p>
     </main>
+    <aside>
+        <p>Aside Content</p>
+    </aside>
     <footer>
         <p>Footer Content</p>
     </footer>
