--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131</title>
+    <meta name="description"
+        content="WDD 131 - Dynamic Web Fundamentals - Men Do. Explore the landing page of the website, featuring a detailed profile page.">
+    <meta name="author" content="Men Do">
+    <title>WDD 131 - Dynamic Web Fundamentals - Men Do</title>
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- Link the JavaScript file with defer -->
+    <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
-    <h1>WDD 131 - Do</h1>
+    <header>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Men Do</h1>
+        <nav>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+            <a href="https://byui.instructure.com/" target="_blank">I-Learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/" target="_blank">Scripture</a>
+            <a href="" target="_blank">Final Project</a>
+        </nav>
+    </header>
+    <main>
+        <section class="card-left">
+            <div class="heading-container">
+                <h2>About Me</h2>
+            </div>
+            <article class="article-01">
+                <img src="images/person-image-min.png">
+                <p>Hello! I'm Men from Georgia, passionate about functional and cognitive fitness. I love exploring ways
+                    to stay physically and mentally active, often dabbling in various areas. Currently, I'm developing a
+                    fitness app that offers tailored routines, tracks recovery, and considers dietary restrictions. As
+                    an RPG fan, I'm excited to include a gamification feature with stats and attributes to motivate
+                    users.</p>
+            </article>
+            <div class="heading-container">
+                <h2>Georgia</h2>
+            </div>
+            <article class="article-02">
+                <img src="images/georgia-state-map-min.png">
+                <p>Georgia, USA, is known for its diverse landscapes, ranging from mountains to coastal plains, and its
+                    rich history. The state is famous for its peaches, pecans, and sweet tea. Atlanta, the capital, is a
+                    major cultural and economic hub, home to major corporations like Coca-Cola and CNN. Georgia is also
+                    historically significant, being a key player in the Civil Rights Movement and the American
+                    Revolution.</p>
+            </article>
+        </section>
+        <section class="card-right">
+            <div class="heading-container">
+                <h2>Web Dev Resources</h2>
+            </div>
+            <article class="article-03">
+                <img src="images/learning-resources-min.png">
+                <a href="https://www.udemy.com" target="_blank">Udemy</a>
+                <a href="https://www.youtube.com" target="_blank">YouTube</a>
+                <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
+                <a href="https://stackoverflow.com" target="_blank">Stack Overflow</a>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>
+            &copy; <span id="currentYear"></span> Men Do Georgia, USA
+        </p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 
 </html>
