updated image filesize and added alt text in the images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>About Me</h2>
             </div>
             <article class="article-01">
-                <img src="images/person-image-min.png">
+                <img src="images/person-image-min.png" alt="a profile picture">
                 <p>Hello! I'm Men from Georgia, passionate about functional and cognitive fitness. I love exploring ways
                     to stay physically and mentally active, often dabbling in various areas. Currently, I'm developing a
                     fitness app that offers tailored routines, tracks recovery, and considers dietary restrictions. As
@@ -45,7 +45,7 @@
                 <h2>Georgia</h2>
             </div>
             <article class="article-02">
-                <img src="images/georgia-state-map-min.png">
+                <img src="images/georgia-state-map-min.png" alt="a cultural map of the state of georgia">
                 <p>Georgia, USA, is known for its diverse landscapes, ranging from mountains to coastal plains, and its
                     rich history. The state is famous for its peaches, pecans, and sweet tea. Atlanta, the capital, is a
                     major cultural and economic hub, home to major corporations like Coca-Cola and CNN. Georgia is also
@@ -58,7 +58,7 @@
                 <h2>Web Dev Resources</h2>
             </div>
             <article class="article-03">
-                <img src="images/learning-resources-min.png">
+                <img src="images/learning-resources-min.png" alt="artwork for the learning resources aside">
                 <a href="https://www.udemy.com" target="_blank">Udemy</a>
                 <a href="https://www.youtube.com" target="_blank">YouTube</a>
                 <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
