updated image type

--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 - Temple Album</title>
+    <meta name="description" content="WDD 131 - Temple Album. Explore the gallery page for the various LDS temples.">
+    <meta name="author" content="Men Do">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,52 +22,52 @@
         <h1>Temple Album</h1>
         <button id="menu"></button>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Old</a>
-            <a href="#">New</a>
-            <a href="#">Large</a>
-            <a href="#">Small</a>
+            <a href="#" target="_blank">Home</a>
+            <a href="#" target="_blank">Old</a>
+            <a href="#" target="_blank">New</a>
+            <a href="#" target="_blank">Large</a>
+            <a href="#" target="_blank">Small</a>
         </nav>
     </header>
     <main>
         <h2>Home</h2>
         <div class="gallery">
             <figure>
-                <img src="images/temples/atlanta-georgia-temple-01.jpg" alt="an image of the Atlanta, Georgia temple">
+                <img src="images/temples/atlanta-georgia-temple-01.webp" alt="an image of the Atlanta, Georgia temple">
                 <figcaption>Atlanta, Georgia</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/urdaneta-philippines-temple-01.jpg"
+                <img src="images/temples/urdaneta-philippines-temple-01.webp"
                     alt="an image of the Urdaneta, Philippines temple">
                 <figcaption>Urdaneta, Philippines</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/puebla-mexico-temple-01.jpg" alt="an image of the Puebla, Mexico temple">
+                <img src="images/temples/puebla-mexico-temple-01.webp" alt="an image of the Puebla, Mexico temple">
                 <figcaption>Puebla, Mexico</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/hong-kong-china-temple-01.jpg" alt="an image of the Hong Kong, China temple">
+                <img src="images/temples/hong-kong-china-temple-01.webp" alt="an image of the Hong Kong, China temple">
                 <figcaption>Hong Kong, China</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/kinshasa-democratic-republic-of-the-congo-temple-01.jpg"
+                <img src="images/temples/kinshasa-democratic-republic-of-the-congo-temple-01.webp"
                     alt="an image of the Kinshasa, Democratic Republic of the Congo temple">
                 <figcaption>Kinshasa, Democratic Republic of the Congo</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/preston-england-temple-01.jpg" alt="an image of the Preston, England temple">
+                <img src="images/temples/preston-england-temple-01.webp" alt="an image of the Preston, England temple">
                 <figcaption>Preston, England</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/paris-france-temple-01.jpg" alt="an image of the Paris, France temple">
+                <img src="images/temples/paris-france-temple-01.webp" alt="an image of the Paris, France temple">
                 <figcaption>Paris, France</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/madrid-spain-temple-01.jpg" alt="an image of the Madrid, Spain temple">
+                <img src="images/temples/madrid-spain-temple-01.webp" alt="an image of the Madrid, Spain temple">
                 <figcaption>Madrid, Spain</figcaption>
             </figure>
             <figure>
-                <img src="images/temples/sapporo-japan-temple-01.jpg" alt="an image of the Sapporo, Japan temple">
+                <img src="images/temples/sapporo-japan-temple-01.webp" alt="an image of the Sapporo, Japan temple">
                 <figcaption>Sapporo, Japan</figcaption>
             </figure>
         </div>
