made corrections per audit tool

--- a/place.html
+++ b/place.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/place-large.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <script src="scripts/place.js" defer></script>
 </head>
@@ -50,8 +50,8 @@
         <section class="weather">
             <h2>Weather</h2>
             <picture class="weather-icon">
-                <img src="images/weather-icons/weather-sun-sunny-icon-mobile.webp"
-                    alt="Icon image for the current weather." width="360" height="360">
+                <img src="images/weather-icons/weather-sun-sunny-icon.svg" alt="Icon image for the current weather."
+                    width="360" height="360">
             </picture>
             <dl></dl>
         </section>
