--- a/form.html
+++ b/form.html
@@ -24,14 +24,14 @@
     <main>
         <form method="GET" action="">
             <fieldset>
-                <label for="product">Product Name</label>
+                <label for="product">Product Name*</label>
                 <select name="product" id="product" required>
                     <option value="" disabled selected>Choose a Product ...</option>
                 </select>
             </fieldset>
 
             <fieldset id="ratings">
-                <div class="form-header">Overall Rating</div>
+                <div class="form-header">Overall Rating*</div>
 
                 <div class="rating-item">
                     <label for="rating1">☆</label>
@@ -56,12 +56,12 @@
             </fieldset>
 
             <fieldset>
-                <label for="installDate">Date of Installation</label>
+                <label for="installDate">Date of Installation*</label>
                 <input type="date" id="installDate" name="installDate" required>
             </fieldset>
 
             <fieldset>
-                <div>
+                <div class="form-header">
                     <p>Which features did you find useful in the product?</p>
                     <p id="italic">(Check all that apply)</p>
                 </div>
