finished w05 form and review

--- a/form.html
+++ b/form.html
@@ -22,10 +22,10 @@
         <h1>Product Review</h1>
     </header>
     <main>
-        <form method="GET" action="">
+        <form method="GET" action="review.html">
             <fieldset>
                 <label for="product">Product Name*</label>
-                <select name="product" id="product" required>
+                <select name="product-placeholder" id="product-placeholder" required>
                     <option value="" disabled selected>Choose a Product ...</option>
                 </select>
             </fieldset>
