--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
         <form method="GET" action="review.html">
             <fieldset>
                 <label for="product">Product Name*</label>
-                <select name="product-placeholder" id="product-placeholder" required>
+                <select name="product" id="product" required>
                     <option value="" disabled selected>Choose a Product ...</option>
                 </select>
             </fieldset>
