--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
         <h1>Product Review</h1>
     </header>
     <main>
-        <form method="GET" action="review.html">
+        <form method="get" action="review.html">
             <fieldset>
                 <label for="product">Product Name*</label>
                 <select name="product" id="product" required>
